# CollaborativeBaxter

./: .gitignore  README.md  baxter.sh  baxter_ridgeback_ETH.sh  baxter_ridgeback_WIFI.sh  frames.gv  home_left_gripper.txt  ridgeback_navigation.rviz  simulation_VSCODE-WS.code-workspace
src/assembly_task/: CMakeLists.txt  package.xml
src/assembly_task/launch/: assembly_task.launch
src/assembly_task/src/: baxter_object_prediction.py  dataset_RPLv1.pkl  grip_node.py  pickup_box.py  planning_node.py  request_object.py  setup_notes.txt
src/inspection_task/: CMakeLists.txt  package.xml
src/inspection_task/launch/: inspection_task.launch
src/inspection_task/msg/: message_baxter.xcf
src/inspection_task/src/: baxter_screws_prediction.py  inspection.py  planning_node_right.py  request_object.py  setup_notes.txt
src/launch_demo/: CMakeLists.txt  package.xml
src/launch_demo/launch/: launch_demo.launch
src/launch_demo/src/: request_action.py
src/object-recognition/launch/: demo.launch
src/ridgeback/: README.md  ridgeback_cartographer_install.sh
src/ridgeback_baxter/ridgeback_baxter_description/: CMakeLists.txt  package.xml
src/ridgeback_baxter/ridgeback_baxter_description/launch/: description.launch  ridgeback_baxter_description.launch
src/ridgeback_baxter/ridgeback_baxter_description/meshes/: pedestal_stand.dae  pedestal_stand_collision.dae  pedestal_stand_collision.stl
src/ridgeback_baxter/ridgeback_baxter_description/urdf/: ridgeback_baxter.urdf  ridgeback_baxter.urdf.xacro
src/smach_baxter/: CMakeLists.txt  package.xml
(+102 files in other folders)
